Refactored everything out into classes, clean up

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,24 +1,11 @@
 name: DevTools
 main: DevTools\DevTools
 version: 1.11.1
-api: 2.0.0
+api: [2.0.0, 3.0.0-ALPHA3]
 load: STARTUP
 author: PocketMine Team
 description: Helps develop and distribute PocketMine-MP plugins
 website: https://github.com/PocketMine/DevTools
-commands:
- makeserver:
-  description: Creates a PocketMine-MP Phar
-  usage: "/makeserver"
-  permission: devtools.command.makeserver
- makeplugin:
-  description: Creates a Phar plugin from one in source code form
-  usage: "/makeplugin <pluginName>"
-  permission: devtools.command.makeplugin
- checkperm:
-  description: Checks a permission value for the current sender, or a player
-  usage: "/checkperm <node> [playerName]"
-  permission: "devtools.command.checkperm;devtools.command.checkperm.other"
 permissions:
  devtools:
   default: op
